--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -22,6 +22,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
+    <!-- Opt out of Google Chrome's translation -->
+    <meta name="google" content="notranslate" />
+    <meta http-equiv="Content-Language" content="en_US" />
     <title>NanoRes Cloud</title>
     <link rel="icon" href="<%= context.config.publicPath +'favicon.ico'%>" type="image/x-icon" />
   </head>
